# pneuma

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yaml  example.S  main.c  out.txt
.cargo/: config.toml
src/: lib.rs  main.rs  rc_context.rs  utils.rs
src/fs/: file.rs  metadata.rs  mod.rs  open_options.rs
src/future/: mod.rs  thin_waker.rs  waker.rs
src/net/: mod.rs
src/net/linux/: mod.rs
src/net/unix/: pipe.rs
src/reactor/: linux.rs  mod.rs
src/reactor/bsd/: event.rs  mod.rs  op.rs
src/reactor/linux/: event.rs  mod.rs  op.rs
src/reactor/non_linux/: mod.rs
src/runtime/: config.rs  executor.rs  globals.rs  mod.rs  shared_queue.rs  singal_stack.rs
src/sync/: lock.rs  mod.rs  mpsc.rs  mutex.rs
src/sys/: mod.rs  statx.rs
src/sys/asm/: aarch64-linux-old.s  aarch64-linux.s  aarch64-macos.s
src/sys/asm/aarch64/: getcontext.S  other.S
src/task/: _context.rs  builder.rs  context.rs  globals.rs  join_handle.rs  mod.rs  rc_context.rs  registers.rs  stack.rs
src/thread/: abort.rs  builder.rs  context.rs  globals.rs  join_handle.rs  mod.rs  rc_context.rs  registers.rs  repr_context.rs  stack.rs  task.rs
src/time/: mod.rs
tests/: mutex.rs  spawn.rs  thread_locals.rs  time.rs  wait.rs  waker.rs
