[package]
name = "pneuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default-features = []
full = ["io"]
io = []

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.151"

[target.'cfg(target_os="linux")'.dependencies]
io-uring = "0.6.2"

[dev-dependencies]
pneuma = { path = ".", features = ["full"] }
