[package]
name = "pneuma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default-features = []
full = ["io"]
io = []

[dependencies]
cargo-llvm-cov = "0.6.5"
cfg-if = "1.0.0"
libc = "0.2.151"
mio = { version = "0.8.10", features = ["os-poll"] }


[target.'cfg(target_os="linux")'.dependencies]
io-uring = "0.6.2"

[target.'cfg(not(target_os="linux"))'.dependencies]
mio = "0.8.10"

[dev-dependencies]
pneuma = { path = ".", features = ["full"] }
